# woodpusher

./: .gitignore  README.md  pyproject.toml
woodpusher/: __init__.py  configs.py  model.py  play.py  plot.py  tokenizer.py  train.py  web.py
woodpusher/data/: download.py  prepare.py
woodpusher/evals/: common.py  elo_vs_stockfish.py  illegal.py  mate_in_one.py  probes.py
