[project]
name = "woodpusher"
version = "0.1.0"
description = "A from-scratch language model trained on Lichess games — the full foundation-model lifecycle at hobby scale"
requires-python = ">=3.12"
dependencies = [
    "chess>=1.11",
    "numpy>=2.0",
    "zstandard>=0.23",
    "requests>=2.32",
    "tqdm>=4.66",
    "matplotlib>=3.9",
    "torch>=2.7",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
